syntax = "proto3";
package lbm.foundation.v1;

option go_package            = "github.com/line/lbm-sdk/x/foundation";
option (gogoproto.equal_all) = true;

import "gogoproto/gogo.proto";

// Params defines the parameters for the foundation module.
message Params {
  bool enabled = 1;
}

// ValidatorAuth defines authorization info of a validator.
message ValidatorAuth {
  string operator_address = 1;
  bool   creation_allowed = 2;
}

// UpdateFoundationParamsProposal details a proposal to update params of cosortium module.
message UpdateFoundationParamsProposal {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string title       = 1;
  string description = 2;
  Params params      = 3;
}

// UpdateValidatorAuthsProposal details a proposal to update validator auths on foundation.
message UpdateValidatorAuthsProposal {
  option (gogoproto.equal)            = false;
  option (gogoproto.goproto_getters)  = false;
  option (gogoproto.goproto_stringer) = false;

  string                 title       = 1;
  string                 description = 2;
  repeated ValidatorAuth auths       = 3;
}
